Update 'f9ip7fzty-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:8578c1f22763d0fbe478fc3e828ef7b9e441c2dc@sha256:ae6beeef6e4c63d75b769af2b0f5c96b02be306beddddcb53c530514287d0607

--- a/components/f9ip7fzty-go/overlays/development/deployment-patch.yaml
+++ b/components/f9ip7fzty-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: f9ip7fzty-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:8578c1f22763d0fbe478fc3e828ef7b9e441c2dc@sha256:ae6beeef6e4c63d75b769af2b0f5c96b02be306beddddcb53c530514287d0607
+          name: container-image
